--- a/src/main/webapp/vistas/instituciones/List.xhtml
+++ b/src/main/webapp/vistas/instituciones/List.xhtml
@@ -29,25 +29,25 @@
 
                         <p:column width="5%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListInstitucionesTitle_idinstitucion}"/>
+                                <h:outputText value="#{bundle.InstitucionTitle}"/>
                             </f:facet>
                             <h:outputText value="#{item.idinstitucion}"/>
                         </p:column>                     
                         <p:column width="25%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListInstitucionesTitle_idorganismo}"/>
+                                <h:outputText value="#{bundle.InstitucionesTitle_idorganismo}"/>
                             </f:facet>
                             <h:outputText value="#{item.idorganismo.nombre}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListInstitucionesTitle_nombre}"/>
+                                <h:outputText value="#{bundle.InstitucionesTitle_nombre}"/>
                             </f:facet>
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>
                         <p:column width="20%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListInstitucionesTitle_tipo}"/>
+                                <h:outputText value="#{bundle.InstitucionesTitle_tipo}"/>
                             </f:facet>
                             <h:outputText value="#{item.tipo}"/>
                         </p:column>
