--- a/src/main/webapp/vistas/organismos/List.xhtml
+++ b/src/main/webapp/vistas/organismos/List.xhtml
@@ -29,19 +29,19 @@
 
                         <p:column width="10%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrganismosTitle_idorganismo}"/>
+                                <h:outputText value="#{bundle.OrganismosTitle_idorganismo}"/>
                             </f:facet>
                             <h:outputText value="#{item.idorganismo}"/>
                         </p:column>
                         <p:column width="25%">
                             <f:facet name="header" >
-                                <h:outputText value="#{bundle.ListOrganismosTitle_iddependencia}"/>
+                                <h:outputText value="#{bundle.OrganismosTitle_iddependencia}"/>
                             </f:facet>
                             <h:outputText value="#{item.iddependencia.siglas}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListOrganismosTitle_nombre}"/>
+                                <h:outputText value="#{bundle.OrganismosTitle_nombre}"/>
                             </f:facet>
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>                        
