--- a/src/main/webapp/vistas/personas/List.xhtml
+++ b/src/main/webapp/vistas/personas/List.xhtml
@@ -30,25 +30,25 @@
                         
                         <p:column width="5%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonasTitle_tipo}"/>
+                                <h:outputText value="#{bundle.PersonasTitle_tipo}"/>
                             </f:facet>
                             <h:outputText value="#{item.tipo}"/>
                         </p:column>
                         <p:column width="15%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonasTitle_curp}"/>
+                                <h:outputText value="#{bundle.PersonasTitle_curp}"/>
                             </f:facet>
                             <h:outputText value="#{item.curp}"/>
                         </p:column>
                         <p:column width="25%">
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonasTitle_nombre}"/>
+                                <h:outputText value="#{bundle.PersonasTitle_nombre}"/>
                             </f:facet>
                             <h:outputText value="#{item.grado} #{item.nombre} #{item.apellidop} #{item.apellidom}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPersonasTitle_idinstitucion}"/>
+                                <h:outputText value="#{bundle.InstitucionTitle}"/>
                             </f:facet>
                             <h:outputText value="#{item.idinstitucion.nombre}"/>
                         </p:column>
