--- a/src/main/webapp/vistas/instituciones/Edit.xhtml
+++ b/src/main/webapp/vistas/instituciones/Edit.xhtml
@@ -12,15 +12,15 @@
             <h:form id="InstitucionesEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{institucionesController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditInstitucionesLabel_idinstitucion}" for="idinstitucion" />
-                        <p:inputText id="idinstitucion" value="#{institucionesController.selected.idinstitucion}" title="#{bundle.EditInstitucionesTitle_idinstitucion}" required="true" requiredMessage="#{bundle.EditInstitucionesRequiredMessage_idinstitucion}" disabled="true"/>
-                        <p:outputLabel value="#{bundle.EditInstitucionesLabel_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{institucionesController.selected.nombre}" title="#{bundle.EditInstitucionesTitle_nombre}" required="true" requiredMessage="#{bundle.EditInstitucionesRequiredMessage_nombre}"/>
-                        <p:outputLabel value="#{bundle.EditInstitucionesLabel_tipo}" for="tipo" />                      
+                        <p:outputLabel value="#{bundle.InstitucionesLabel_idinstitucion}" for="idinstitucion" />
+                        <p:inputText id="idinstitucion" value="#{institucionesController.selected.idinstitucion}" title="#{bundle.InstitucionesTitle_idinstitucion}" required="true" requiredMessage="#{bundle.InstitucionesRequiredMessage_idinstitucion}" disabled="true"/>
+                        <p:outputLabel value="#{bundle.InstitucionesLabel_nombre}" for="nombre" />
+                        <p:inputText id="nombre" value="#{institucionesController.selected.nombre}" title="#{bundle.InstitucionesTitle_nombre}" required="true" requiredMessage="#{bundle.InstitucionesRequiredMessage_nombre}"/>
+                        <p:outputLabel value="#{bundle.InstitucionesLabel_tipo}" for="tipo" />                      
                         <p:selectOneMenu id="tipo" value="#{institucionesController.selected.tipo}" >
                             <f:selectItems value="#{institucionesController.tipo}" />
                         </p:selectOneMenu>
-                        <p:outputLabel value="id dependencia" for="dependencia" />
+                        <p:outputLabel value="#{bundle.DependenciaLabel}" for="dependencia" />
                         <p:selectOneMenu id="dependencia" value="#{institucionesController.dependencia}" >
                             <f:selectItems value="#{dependenciasController.items}"
                                            var="dependencia"
@@ -28,7 +28,7 @@
                                            itemValue="#{dependencia.iddependencia}"/>  
                             <p:ajax event="change" update="idorganismo" />
                         </p:selectOneMenu>
-                        <p:outputLabel value="#{bundle.EditInstitucionesLabel_idorganismo}" for="idorganismo" />
+                        <p:outputLabel value="#{bundle.InstitucionesLabel_idorganismo}" for="idorganismo" />
                         <p:selectOneMenu id="idorganismo" value="#{institucionesController.selected.idorganismo}" >
                             <f:selectItems value="#{institucionesController.itemsDependencia}"
                                            var="idorganismoItem"
