--- a/src/main/webapp/vistas/organismos/Create.xhtml
+++ b/src/main/webapp/vistas/organismos/Create.xhtml
@@ -12,9 +12,9 @@
             <h:form id="OrganismosCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{organismosController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateOrganismosLabel_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{organismosController.selected.nombre}" title="#{bundle.CreateOrganismosTitle_nombre}" required="true" requiredMessage="#{bundle.CreateOrganismosRequiredMessage_nombre}"/>
-                        <p:outputLabel value="#{bundle.CreateOrganismosLabel_iddependencia}" for="iddependencia" />
+                        <p:outputLabel value="#{bundle.OrganismosLabel_nombre}" for="nombre" />
+                        <p:inputText id="nombre" value="#{organismosController.selected.nombre}" title="#{bundle.OrganismosTitle_nombre}" required="true" requiredMessage="#{bundle.OrganismosRequiredMessage_nombre}"/>
+                        <p:outputLabel value="#{bundle.OrganismosLabel_iddependencia}" for="iddependencia" />
                         <p:selectOneMenu id="iddependencia" value="#{organismosController.selected.iddependencia}" >
                             
                             <f:selectItems value="#{dependenciasController.itemsAvailableSelectOne}" 
