--- a/src/main/webapp/vistas/organismos/View.xhtml
+++ b/src/main/webapp/vistas/organismos/View.xhtml
@@ -3,7 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
@@ -12,12 +11,12 @@
             <h:form id="OrganismosViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{organismosController.selected != null}">
-                        <h:outputText value="#{bundle.ViewOrganismosLabel_idorganismo}"/>
-                        <h:outputText value="#{organismosController.selected.idorganismo}" title="#{bundle.ViewOrganismosTitle_idorganismo}"/>
-                        <h:outputText value="#{bundle.ViewOrganismosLabel_iddependencia}"/>
-                        <h:outputText value="#{organismosController.selected.iddependencia.siglas}" title="#{bundle.ViewOrganismosTitle_iddependencia}"/>
-                        <h:outputText value="#{bundle.ViewOrganismosLabel_nombre}"/>
-                        <h:outputText value="#{organismosController.selected.nombre}" title="#{bundle.ViewOrganismosTitle_nombre}"/>
+                        <h:outputText value="#{bundle.OrganismosLabel_idorganismo}"/>
+                        <h:outputText value="#{organismosController.selected.idorganismo}" title="#{bundle.OrganismosTitle_idorganismo}"/>
+                        <h:outputText value="#{bundle.OrganismosLabel_iddependencia}"/>
+                        <h:outputText value="#{organismosController.selected.iddependencia.siglas}" title="#{bundle.OrganismosTitle_iddependencia}"/>
+                        <h:outputText value="#{bundle.OrganismosLabel_nombre}"/>
+                        <h:outputText value="#{organismosController.selected.nombre}" title="#{bundle.OrganismosTitle_nombre}"/>
                         
                     </p:panelGrid>                 
                 </h:panelGroup>
