--- a/src/main/webapp/vistas/personas/View.xhtml
+++ b/src/main/webapp/vistas/personas/View.xhtml
@@ -11,7 +11,7 @@
         <p:dialog id="PersonasViewDlg" widgetVar="PersonasViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewPersonasTitle}">
             <h:form id="PersonasViewForm">
                 <h:panelGroup id="display">
-                    <p:panel header="#{bundle.Detalles}">
+                    <p:panel header="#{bundle.DetallesPanel}">
                         <p:fieldset legend="#{bundle.InstitucionTitle}" style="margin-bottom:20px">
                             <p:panelGrid columns="2" layout="grid">
                                 <h:outputText value="#{bundle.DependenciaLabel}"/>
