--- a/src/main/webapp/vistas/solicitudesInternet/Edit.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Edit.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog id="SolicitudesInternetEditDlg" width="80%" height="50%" closable="false" widgetVar="SolicitudesInternetEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditSolicitudesInternetTitle}">
+        <p:dialog id="SolicitudesInternetEditDlg"   widgetVar="SolicitudesInternetEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditSolicitudesInternetTitle}">
             <h:form id="SolicitudesInternetEditForm">
                 <h:panelGroup id="display" >
                     <p:growl id="growlEditSolici"  sticky="true" showDetail="true"/>
