--- a/src/main/webapp/vistas/solicitudesInternet/View.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition>
 
-        <p:dialog id="SolicitudesInternetViewDlg" width="80%" height="50%" widgetVar="SolicitudesInternetViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewSolicitudesInternetTitle}">
+        <p:dialog id="SolicitudesInternetViewDlg" widgetVar="SolicitudesInternetViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewSolicitudesInternetTitle}">
             <h:form id="SolicitudesInternetViewForm">
                 <h:panelGroup id="display">
                    
