--- a/src/main/webapp/vistas/solicitudesInternet/List.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/List.xhtml
@@ -11,8 +11,13 @@
         <ui:define name="title">
             <h:outputText value="#{bundle.ListSolicitudesInternetTitle}"></h:outputText> 
         </ui:define> 
-        <ui:define name="body">
-            <h:form id="SolicitudesInternetListForm">
+        <ui:define name="body">                                     
+            <h:form id="SolicitudesInternetListForm">  
+                <p:contextMenu for="datalist">
+                    <p:menuitem icon="ui-icon-search" value="#{bundle.View}" update=":SolicitudesInternetViewForm" oncomplete="PF('SolicitudesInternetViewDialog').show()" action="#{solicitudesInternetController.iniciarValores()}"/>
+                    <p:menuitem icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SolicitudesInternetEditForm  " oncomplete="PF('SolicitudesInternetEditDialog').show()" />
+                </p:contextMenu>
+                <p:commandButton id="createButtonSolicitud" icon="ui-icon-plus"   value="Create" actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreate').show()"/>
                 <p:panel header="#{bundle.ListSolicitudesInternetTitle}">
                     <p:dataTable id="datalist" value="#{solicitudesInternetController.items}" var="item"
                                  selectionMode="single" selection="#{solicitudesInternetController.selected}"
@@ -21,12 +26,10 @@
                                  rowKey="#{item.solicitud}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
+                                 editable="true"
                                  >
 
-                        <p:ajax event="rowSelect"   update=" viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update=" viewButton editButton deleteButton"/>
-
-                        <p:column resizable="false">
+                        <p:column filterBy="#{item.solicitud}" resizable="false">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSolicitudesInternetTitle_solicitud}"/>
                             </f:facet>
@@ -50,7 +53,7 @@
                             </f:facet>
                             <h:outputText value="#{item.dependencia}"/>
                         </p:column>
-                        <p:column>
+                        <p:column filterBy="#{item.organismo}">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSolicitudesInternetTitle_organismo}"/>
                             </f:facet>
@@ -87,11 +90,6 @@
                             <h:outputText value="#{item.nivel}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButtonSolicitud" icon="ui-icon-plus"   value="Create" actionListener="#{solicitudesInternetController.prepareCreate}" update=":SolicitudesInternetCreateForm" oncomplete="PF('SolicitudesInternetCreate').show()"/>
-                            <p:commandButton id="createButtonSolicitudTxt" icon="ui-icon-plus"   value="Create(txt)"  oncomplete="PF('createSolTxtDialog').show()" />
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":SolicitudesInternetViewForm" oncomplete="PF('SolicitudesInternetViewDialog').show()" disabled="#{empty solicitudesInternetController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":SolicitudesInternetEditForm" oncomplete="PF('SolicitudesInternetEditDialog').show()" disabled="#{empty solicitudesInternetController.selected}" 
-                                             action="#{solicitudesInternetController.iniciarValores()}"/>
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{solicitudesInternetController.destroy}" update=":growl,datalist" disabled="#{empty solicitudesInternetController.selected}"/>
                         </f:facet>
                     </p:dataTable>
@@ -100,7 +98,6 @@
             <ui:include src="Create.xhtml"/>
             <ui:include src="Edit.xhtml"/>
             <ui:include src="View.xhtml"/>    
-            <ui:include src="createSolicitudTXT.xhtml"/>
             </ui:define>
         <ui:define name="footer">
             
